[gd_scene load_steps=27 format=3 uid="uid://wp1csgvle6i4"]

[ext_resource type="Script" path="res://game.gd" id="1_3cmpg"]
[ext_resource type="Script" path="res://solar_system/solar_system.gd" id="1_tcbv5"]
[ext_resource type="Texture2D" uid="uid://b0s3fc7sjnlof" path="res://solar_system/space_background.png" id="2_06f30"]
[ext_resource type="PackedScene" uid="uid://dc4lolnw2ugli" path="res://camera/camera.tscn" id="2_hifyg"]
[ext_resource type="PackedScene" uid="uid://bt4iegdy4r0m3" path="res://character/ship_controller.tscn" id="2_r8dnv"]
[ext_resource type="Texture2D" uid="uid://bar13k13o7sw8" path="res://gui/textures/mouse-action-icon.png" id="3_6w2nu"]
[ext_resource type="PackedScene" uid="uid://blqdy4acm4wpa" path="res://ship/ship.tscn" id="4_fmsd4"]
[ext_resource type="PackedScene" uid="uid://kmk540coucog" path="res://character/character.tscn" id="6_l3gax"]
[ext_resource type="PackedScene" uid="uid://bt3edpby8c65s" path="res://addons/gdquest.mannequin/src/Player/controller.tscn" id="7_s7ow6"]
[ext_resource type="PackedScene" uid="uid://dmiuco3ut42e8" path="res://character/remote_controller.tscn" id="8_fysay"]
[ext_resource type="PackedScene" uid="uid://c28gpsbc77378" path="res://machines/station.tscn" id="9_fge0m"]
[ext_resource type="Script" path="res://addons/SIsilicon.vfx.lens flare/lens-flare.gd" id="9_w721i"]
[ext_resource type="PackedScene" uid="uid://bu1ftqx735ygp" path="res://gui/mouse_capture.tscn" id="10_4n27f"]
[ext_resource type="Script" path="res://gui/loading_screen.gd" id="11_vsdyb"]
[ext_resource type="PackedScene" uid="uid://b1jp62h7crdt7" path="res://gui/pause_menu/pause_menu.tscn" id="12_cuwn3"]
[ext_resource type="Script" path="res://voxel_debug_info.gd" id="12_ysp6t"]
[ext_resource type="Script" path="res://sounds/ambient_sounds.gd" id="13_esoyx"]
[ext_resource type="AudioStream" uid="uid://pdsd7xlt73p1" path="res://sounds/deep_space.ogg" id="14_krriv"]
[ext_resource type="PackedScene" uid="uid://c0s0vh504ph30" path="res://planet_mode.tscn" id="16_fuknr"]
[ext_resource type="PackedScene" uid="uid://co45bdw7qhu7i" path="res://waypoints/waypoint.tscn" id="17_mvuvu"]
[ext_resource type="PackedScene" uid="uid://dig3qsvc3wh4c" path="res://game/gui/hud.tscn" id="19_e42xy"]
[ext_resource type="PackedScene" uid="uid://bmeom61qnlny2" path="res://assets/asset_inventory.tscn" id="19_vd2ea"]
[ext_resource type="PackedScene" uid="uid://c6ts5uteg6kpo" path="res://warehouse/warehouse.tscn" id="23_pk8da"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_cmlyd"]
panorama = ExtResource("2_06f30")

[sub_resource type="Sky" id="1"]
sky_material = SubResource("PanoramaSkyMaterial_cmlyd")

[sub_resource type="Environment" id="2"]
background_mode = 2
sky = SubResource("1")
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 18.0
glow_enabled = true
glow_levels/5 = 0.0
glow_levels/6 = 1.0
glow_levels/7 = 1.0
glow_intensity = 1.0
glow_blend_mode = 0
glow_hdr_threshold = 0.8

[node name="Game" type="Node3D" groups=["game", "planet_mode"]]
script = ExtResource("1_3cmpg")
ShipController = ExtResource("2_r8dnv")
WaypointScene = ExtResource("17_mvuvu")
_mouse_action_texture = ExtResource("3_6w2nu")
CameraScene = ExtResource("2_hifyg")
ShipScene = ExtResource("4_fmsd4")
CharacterScene = ExtResource("6_l3gax")
LocalControllerScene = ExtResource("7_s7ow6")
RemoteControllerScene = ExtResource("8_fysay")
StationScene = ExtResource("9_fge0m")

[node name="SolarSystem" type="Node3D" parent="." groups=["game_world"]]
script = ExtResource("1_tcbv5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="SolarSystem"]
environment = SubResource("2")

[node name="SpawnPoint" type="Marker3D" parent="SolarSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8000, 0, 0)

[node name="LensFlare" type="Node" parent="SolarSystem"]
script = ExtResource("9_w721i")
flareStrength = 4.0
flareBias = 0.95
flareBlur = 3.0
distortion = 7.422
haloWidth = 0.449

[node name="VoxelDebugInfo" type="Node" parent="SolarSystem"]
process_mode = 4
script = ExtResource("12_ysp6t")

[node name="AmbientSounds" type="Node" parent="SolarSystem"]
process_mode = 4
script = ExtResource("13_esoyx")

[node name="DeepSpace" type="AudioStreamPlayer" parent="SolarSystem/AmbientSounds"]
stream = ExtResource("14_krriv")
autoplay = true
bus = &"SFX"

[node name="PlanetNight" type="AudioStreamPlayer" parent="SolarSystem/AmbientSounds"]

[node name="PlanetDay" type="AudioStreamPlayer" parent="SolarSystem/AmbientSounds"]

[node name="planet_mode" parent="SolarSystem" instance=ExtResource("16_fuknr")]
WaypointScene = ExtResource("17_mvuvu")

[node name="SelectionMode" type="Node" parent="SolarSystem"]

[node name="warehouse" parent="." instance=ExtResource("23_pk8da")]

[node name="HUD" parent="." instance=ExtResource("19_e42xy")]

[node name="MouseCapture" parent="." instance=ExtResource("10_4n27f")]
capture_mouse_in_ready = false

[node name="LoadingScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)
script = ExtResource("11_vsdyb")

[node name="CC" type="CenterContainer" parent="LoadingScreen"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PC" type="PanelContainer" parent="LoadingScreen/CC"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="LoadingScreen/CC/PC"]
layout_mode = 2

[node name="Label" type="Label" parent="LoadingScreen/CC/PC/VB"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen/CC/PC/VB"]
layout_mode = 2
max_value = 1.0

[node name="PauseMenu" parent="." instance=ExtResource("12_cuwn3")]
visible = false

[node name="asset_inventory" parent="." instance=ExtResource("19_vd2ea")]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -137.5
offset_top = -98.0
offset_right = 137.5
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
show_percentage = false

[connection signal="loading_progressed" from="SolarSystem" to="." method="_on_solar_system_loading_progressed"]
[connection signal="loading_progressed" from="SolarSystem" to="LoadingScreen" method="_on_GameWorld_loading_progressed"]
[connection signal="reference_body_changed" from="SolarSystem" to="SolarSystem/AmbientSounds" method="_on_GameWorld_reference_body_changed"]
[connection signal="exit_to_menu_requested" from="PauseMenu" to="." method="_on_pause_menu_exit_to_menu_requested"]
[connection signal="exit_to_menu_requested" from="PauseMenu" to="SolarSystem" method="_on_PauseMenu_exit_to_menu_requested"]
[connection signal="exit_to_os_requested" from="PauseMenu" to="SolarSystem" method="_on_PauseMenu_exit_to_os_requested"]
[connection signal="resume_requested" from="PauseMenu" to="." method="_on_PauseMenu_resume_requested"]
[connection signal="settings_requested" from="PauseMenu" to="." method="_on_PauseMenu_settings_requested"]
